k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: numeric-api-deployment
  labels:
    app: numeric-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: numeric-api
  template:
    metadata:
      labels:
        app: numeric-api
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      
      containers:
      - name: numeric-api
        image: ghcr.io/cabukege/numeric:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
            
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
