k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: numeric-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: numeric.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: numeric-api-service
                port:
                  number: 80
